--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "main": "app.js",
   "engines": {
-    "node": "16.17.1"
+    "node": "16.18.1",
+    "npm": "8.19.2"
   },
   "scripts": {
     "start": "nodemon ./bin/www"
