--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "8.19.2"
   },
   "scripts": {
-    "start": "nodemon src/app.js"
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
