--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "proyecto",
   "version": "0.0.0",
   "private": true,
-  "main": "app.js",
+  "main": "index.js",
   "engines": {
     "node": "16.18.1",
     "npm": "8.19.2"
   },
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
